  (LP #1025922)

- always use short description in content feeds to avoid formatting issues with
  special content.

- remove duplicate alpha added subscriber which caused community letter nav to
  show invalid letters.

- Fixed calendar printing on ux2 (LP #904822)

- Fixed the calendar popover to be clickable on ux2 (LP #1024000)

3.90 (2012-07-12)
-----------------

- Fixed bug in Chatter that caused Not Found errors to get turned into 
  General Errors that tripped the error monitor's alarm.  (LP #1018909)

- Added support for logging Not Found errors under their own category in the 
  Redis log, so they can be monitored without tripping any alarms.  
  (LP #1018909)

- Guard office links in footer with permission.  (LP #1018478)

- Continuing work on UX2.

3.89 (2012-06-26)
-----------------

- Continuing work on UX2.

- Fixed the 'Add Column' link in peopledir. (LP #931878)

3.88 (2012-06-06)
-----------------

- Fixed bug in digest. (LP #932865)

- Continuing work on UX2.

3.87 (2012-05-30)
-----------------

- Replaced the old filesystem based error monitor with the redislog. 
  (LP #960107)

3.86 (2012-05-10)
-----------------

- The envelope from for bounced email messages is now set to the value of the 
  'postoffice.bounce_from_email' setting.  (LP #996027)

- The admin views which access the postoffice quarantine now connect to the
  postoffice db using repoze.zodbconn's built in support for multiple databases.
  (LP #985546)

- Continuing work on UX2.

- Move the styled error pages from middleware into Pyramid exception views.
  (LP 955307)

3.85 (2012-04-23)
-----------------

- Fix more bugs caused by UX1 wanting to use the name 'layout' in templates.

3.84 (2012-04-23)
-----------------

- Fix bug where rendering a template from a console script would raise an 
  exception. 

- Fix error when rendering Edit Reference Manual Page view in UX1. (LP #987257)

3.83 (2012-04-19)
-----------------
